# streaming-tts

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
examples/: README.md  advanced_usage.py  async_streaming.py  basic_usage.py  callback_streaming.py  format_conversion.py  voice_blending.py
src/streaming_tts/: __init__.py  audio.py  buffers.py  config.py  engine.py  formats.py  stream.py
streaming_tts/: __init__.py  audio_writer.py  diagnostics.py  kokoro_engine.py  stream_player.py  text_normalizer.py  text_processor.py  text_to_stream.py  threadsafe_generators.py
tests/: __init__.py  conftest.py  test_audio.py  test_audio_writer.py  test_base_engine.py  test_buffers.py  test_config.py  test_crossfade.py  test_diagnostics.py  test_engine.py  test_formats.py  test_integration.py  test_kokoro_engine.py  test_stream.py  test_stream_player.py  test_text_normalizer.py  test_text_processor.py  test_text_to_stream.py  test_threadsafe_generators.py
