[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streaming-tts"
version = "0.3.6"
description = "Lightweight streaming text-to-speech with Kokoro engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["text-to-speech", "tts", "streaming", "kokoro", "audio"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "stream2sentence>=0.3.1",
    "pydub>=0.25.1",
    "pyaudio>=0.2.14",
    "resampy>=0.4.3",
    "kokoro>=0.9.4",
    "torch",
    "numpy",
    "inflect>=7.0.0",
    "av>=12.0.0",
    "misaki[en]>=0.9.4",
]

[project.optional-dependencies]
jp = [
    "misaki[ja]>=0.9.4",
    "mecab-python3>=1.0.6",
    "unidic-lite>=1.0.8",
    "cutlet",
    "fugashi>=1.4.0",
    "jaconv>=0.4.0",
    "mojimoji>=0.0.13",
    "pyopenjtalk>=0.4.0",
]
zh = [
    "misaki[zh]>=0.9.4",
    "pypinyin>=0.53.0",
    "ordered_set>=4.1.0",
    "jieba>=0.42.1",
    "cn2an>=0.5.23",
]
ko = [
    "misaki[ko]>=0.9.4",
    "hangul_romanize",
]
all = [
    "streaming-tts[audio,phonemizer,jp,zh,ko]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/nikkoxgonzales/streaming-tts"
Repository = "https://github.com/nikkoxgonzales/streaming-tts"
Issues = "https://github.com/nikkoxgonzales/streaming-tts/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
# Allow imports after warnings.filterwarnings in __init__.py
"__init__.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
implicit_optional = true
# Disable strict checks - source code has pre-existing type issues
disable_error_code = [
    "var-annotated",
    "return",
    "return-value",
    "assignment",
    "arg-type",
    "attr-defined",
    "operator",
    "override",
]
